DEX-27229 | fix: only wrap element when needed

--- a/_src-lp/blocks/b-productswithinputdevices/b-productswithinputdevices.scss
+++ b/_src-lp/blocks/b-productswithinputdevices/b-productswithinputdevices.scss
@@ -410,7 +410,7 @@
     margin: auto;
 
     h3 {
-      flex-direction: column;
+      flex-wrap: wrap;
     }
 }
 
